--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -10,3 +10,11 @@
     padding: 0 4rem;
   }
 }
+
+.lead-text {
+  color: $main-color;
+  font-weight: 700;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
