--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,4 +5,19 @@ $secondary-color: #fff;
 $light-color: #f9f9f9;
 $medium-color: #ccc;
 $dark-color: #333;
-$bg-image: url('../img/myimage.jpg')
+$bg-image: url('../img/myimage.jpg');
+
+::-webkit-scrollbar {
+  width: 12px; //Adjust the width to make it thinner
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
