--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   line-height: 1.6;
@@ -93,8 +97,8 @@ li {
   &-text {
     h1 {
       color: $dark-color;
-      font-size: 2.5rem;
-      font-weight: 400;
+      font-size: 3.5rem;
+      font-weight: 700;
       line-height: 1.2;
       margin-bottom: 1rem;
       margin-top: 1rem;
@@ -135,8 +139,8 @@ li {
     background-size: cover;
     background-position: center;
     border: $dark-color solid 5px;
-    border-radius: 50%; /* Initial border-radius value */
-    animation: morphAnimation 5s infinite alternate;
+    border-radius:  60% 30% 70% 40%/60% 40% 30% 70%;  /* Initial border-radius value */
+    animation: morphAnimation 8s infinite alternate;
   }
 
   @keyframes morphAnimation {
@@ -154,13 +158,20 @@ li {
     font-size: 1.3rem;
     left: 0;
     padding-bottom: 4rem;
-    margin-bottom: 4rem; 
+    margin-bottom: 4rem;
+    width: 100%;
+
+    p span {
+      padding-left: 2rem;
+    }
 
     ul {
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
       list-style: none;
+      margin-left: 2rem;
+      padding-left: 2rem;
     }
 
     ul li img {
@@ -170,8 +181,255 @@ li {
 
       &:hover {
         transform: translateY(-15px);
+        cursor: pointer;
       }
     }
   }
 }
 
+// About section
+#about {
+  background: $secondary-color;
+  padding: 10rem 0;
+  height: 90vh;
+
+  .about-content {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 3rem;
+  }
+
+  img {
+    border-radius: 1.7rem;
+    height: 20rem;
+    width: 30rem;
+  }
+
+  .text { 
+    line-height: 1.5; 
+  }
+
+  h4 {
+    padding-bottom: 1rem;
+    font-size: 1.4rem;
+  }
+}
+
+// Projects Section
+#projects {
+  background: $light-color;
+  padding: 8rem 0;
+
+  .project-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h3 {
+    padding-bottom: 1rem;
+    font-size: 1.7rem;
+  }
+  
+  .projects-grid {
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: 1fr; 
+    height: auto;
+    width: 100%;
+
+    .pro {
+      display: flex;
+      background: $secondary-color;
+      border-radius: 1.7rem;
+      box-shadow: 0 0 10px rgba(0, 0, 0, .1); 
+      display: flex; /* Make it a flex container */
+      flex-direction: row;
+      gap: 5rem;
+      height: 400px;
+      padding: 1.3rem;
+    }
+
+    .pro-img {
+      background-color: hsla(0, 0%, 46%, .2);
+      border-radius: 1.7rem;
+      box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+      height: auto;
+      overflow: hidden;
+      width: 50%;
+      position: relative;
+    }
+
+    .pro-img img {
+      height: auto;
+      width: 100%;
+    }
+
+    .pro-img:hover img:first-child {
+      animation: scrollAnimationFirst 5s ease-in-out infinite;
+    }
+
+    .pro-img:hover img:nth-child(2) {
+      animation: scrollAnimationSecond 5s ease-in-out infinite;
+    }
+
+    @keyframes scrollAnimationFirst {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-30%);
+      }
+    }
+
+    @keyframes scrollAnimationSecond {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-50%);
+      }
+    }
+
+ 
+    .pro-text {
+      display: flex;
+      flex-direction: column;
+      height: auto;
+      justify-content: center;
+      text-align: center;
+      width: 50%;
+      height: 300px;
+
+      h3 {
+        align-items: center;
+        color: #2d2e32;
+        display: flex;
+        font-size: 1rem;
+        gap: 0.2rem;
+        justify-content: center;
+        position: relative;
+        text-transform: uppercase;
+        margin-top: 1rem;
+        padding-top: 1rem;
+
+        .date-class {
+          font-size: 0.8rem;
+        }
+      }
+
+      p {
+        line-height: 1.4;
+      }
+    }
+
+    .stack p {
+      display: inline-block;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,.1);
+      color: #000!important;
+      font-family: Mulish,sans-serif!important;
+      font-weight: 600!important;
+      padding: 1rem 1.3rem;
+      margin: 1rem 0;
+    }
+
+    .links, .links a {
+      display: flex;
+      align-items: center;
+    }
+
+    .links {
+      gap: 2rem;
+      justify-content: center;
+      margin-top: 1rem;
+
+      i {
+        padding-left: 1rem;
+      }
+    }
+  }
+
+  .pro-reverse {
+    flex-direction: row-reverse!important;
+  }
+}
+
+// Contact Section
+#contact {
+  background: $secondary-color;
+  height: 400px;
+
+  .contact-content {
+    padding: 4rem 0;
+
+    .contact-title {
+      padding-bottom: 2rem;
+
+      h3 {
+        font-size: 1.7rem;
+      } 
+    }
+
+    .contact-icon,
+    .contact-div {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
+      justify-content: center;
+      align-items: center;
+
+      .contact-div {
+        display: flex;
+
+        a {
+          font-size: 1.2rem;
+          font-weight: 600;
+        }
+      }
+
+      .circle-icon {
+        display: grid;
+        border-radius: 50%;
+        width: 70px;
+        height: 70px;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+
+
+        i {
+          font-size: 2rem;
+          color: $main-color;   
+        }
+      }
+    }
+  }
+}
+
+// Footer
+#footer {
+  background: $dark-color;
+  color: $light-color;
+  height: 100px;
+
+  h3 {
+    font-weight: 400;
+  }
+
+  a {
+    color: $light-color;
+
+    i {
+      font-size: 2rem;
+    }
+  }
+
+  .footer-text {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 0;
+  }
+}
+
+@import 'media';
