--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -160,6 +160,15 @@
     #projects {
         text-align: center;
 
+        .project-content {
+            margin-top: 8rem;
+        }
+
+        h3 {
+            font-size: 1.4rem;
+        }
+
+
         .pro {
             display: flex;
             flex-direction: column !important;
