--- a/scss/main.scss
+++ b/scss/main.scss
@@ -375,7 +375,7 @@ li {
 
         i {
           font-size: 2rem;
-          color: $main-color;   
+          color: $dark-color;
         }
       }
     }
